<resources>
    <string name="app_name">SQLite Three Tables CRUD</string>
    <string name="action_add_subject">Add Subject</string>
    <string name="course_code">Course Code: %d</string>
    <string name="course_credit">Course Credit: %.2f</string>
    <string name="title_activity_subjects">Subject List</string>
    <string name="no_data_found">No data found in database!</string>
    <string name="student_count">Number of Student: %d</string>
    <string name="subject_count">Number of Subject: %d</string>
    <string name="taken_subject_count">Number of Taken Subject: %d</string>
    <string name="delete_button_description">This icon is responsible for delete the resource</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_subject">CreateSubjectActivity</string>
    <string name="registration_no">Registration No</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="cross_image_content_description">Delete student from SQLite database</string>
    <string name="empty_list_message">List is Empty!</string>
    <string name="student_name">Student Name</string>
    <string name="update">Update</string>
    <string name="cancel_button">Cancel</string>
    <string name="create_button">Create</string>
    <string name="all_delete">All Delete</string>
    <string name="edit_button_description">Edit Single student information</string>
    <string name="subject_name">Subject Name</string>
    <string name="subject_code">Subject Code</string>
    <string name="subject_credit">Subject Credit</string>
    <string name="add_new_subject">Add New Subject</string>
    <string name="student_information">Student Information</string>
    <string name="name">Name</string>
    <string name="registration_no_with_color">Registration Number: </string>
    <string name="subject_list">Subject List</string>
    <string name="student_list">Student List</string>
    <string name="database_summary">Total Student: %1$d. Total Subject: %2$d</string>
    <string name="update_button">Update</string>
    <string name="table_row_count_failed">Table row count failed</string>
    <string name="taken_subject_by_student">Taken Subjects by Student</string>
    <string name="student_and_taken_subject"><![CDATA[Student Info & Taken Subject]]></string>
    <string name="no_subject">This student haven\'t taken any subject</string>
    <string name="subject_assign">Subject Assign to Student</string>
    <string name="close">Close</string>
    <string name="no_subject_so_add_now">No subject is found in database. Please add subject from Home page\'s menu</string>
</resources>
