<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <EditText
        android:id="@+id/subjectNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/subject_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/subjectCodeEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/subject_code"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subjectNameEditText" />

    <EditText
        android:id="@+id/subjectCreditEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/subject_credit"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subjectCodeEditText" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/cancelButton"
        app:layout_constraintTop_toBottomOf="@+id/subjectCreditEditText" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        app:layout_constraintLeft_toRightOf="@+id/updateButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/updateButton" />

</android.support.constraint.ConstraintLayout>
