<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#c1fff0"
    android:padding="10dp">

    <TextView
        android:id="@+id/studentCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/subjectCount"
        app:layout_constraintStart_toStartOf="@id/subjectCount"
        tools:text="@string/student_count" />

    <TextView
        android:id="@+id/subjectCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/takenSubjectCount"
        app:layout_constraintStart_toStartOf="@id/takenSubjectCount"
        tools:text="@string/subject_count" />

    <TextView
        android:id="@+id/takenSubjectCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/taken_subject_count" />

</android.support.constraint.ConstraintLayout>