<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/subjectNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Data Structures"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/courseCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/course_code"
            app:layout_constraintTop_toBottomOf="@id/subjectNameTextView"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/creditTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/course_credit"
            app:layout_constraintTop_toBottomOf="@id/courseCodeTextView"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/deleteIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/delete_button_description"
            app:srcCompat="@drawable/ic_delete_black_24dp"/>

        <ImageView
            android:id="@+id/editIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_edit_black_24dp"
            app:layout_constraintEnd_toStartOf="@id/deleteIcon"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/edit_button_description"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>